# devtools

./: LICENSE  README.md  pyproject.toml
src/devtools/: adbshot.py  adbw.py  azlogs.py  bongo.py  oneshot.py
