[project]
name = "devtools"
version = "0.1.0"
description = "CLI developer tools"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
adbshot = "devtools.adbshot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtools"]
