[project]
name = "devtools"
version = "0.1.0"
description = "CLI developer tools"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
adbshot = "devtools.adbshot:main"
adbw = "devtools.adbw:main"
azlogs = "devtools.azlogs:main"
bongo = "devtools.bongo:main"
oneshot = "devtools.oneshot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtools"]
